Add visible link to discounts on Merchant dashboard

--- a/app/views/merchant/dashboard/index.html.erb
+++ b/app/views/merchant/dashboard/index.html.erb
@@ -9,6 +9,7 @@
 </ul>
 
 <p> <%= link_to "Merchant Items", "/merchant/items" %></p>
+<p> <%= link_to "Merchant Discounts", "/merchant/discounts" %></p>
 
 <h3>Pending Orders for <%= @merchant_employee.merchant.name %></h3>
 
