--- a/app/views/merchant/discounts/index.html.erb
+++ b/app/views/merchant/discounts/index.html.erb
@@ -1,6 +1,8 @@
-<h1> Discounts</h1>
+<h1> Current Discounts</h1>
 
 <% @discounts.each do |discount| %>
     <p>Discount: <%= discount.discount_percentage %>%</p>
     <p>Minimum Quantity: <%= discount.minimum_quantity %> items</p>
   <% end  %>
+
+<h2> <%= link_to "Create a New Discount", "/merchant/discounts/new" %></h2>
