--- a/app/views/merchant/discounts/index.html.erb
+++ b/app/views/merchant/discounts/index.html.erb
@@ -1,6 +1,7 @@
 <h1> Current Discounts</h1>
 
 <% @discounts.each do |discount| %>
+    <p>Discount #<%= discount.id  %>  </p>
     <p>Discount: <%= discount.discount_percentage %>%</p>
     <p>Minimum Quantity: <%= discount.minimum_quantity %> items</p>
   <% end  %>
