--- a/app/views/merchant/discounts/index.html.erb
+++ b/app/views/merchant/discounts/index.html.erb
@@ -5,6 +5,7 @@
     <h3><%= link_to "Discount ##{discount.id}", "/merchant/discounts/#{discount.id}" %></h3>
     <p>Discount: <%= discount.discount_percentage %>%</p>
     <p>Minimum Quantity: <%= discount.minimum_quantity %> items</p>
+    <h4><%= link_to "Edit Discount", "/merchant/discounts/#{discount.id}/edit" %></h4>
   <% end  %>
 </section>
 
