--- a/app/views/merchant/discounts/index.html.erb
+++ b/app/views/merchant/discounts/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @discounts.each do |discount| %>
   <section id= "discount-<%= discount.id %>">
-    <h3><%= link_to "Discount ##{discount.id}", "/merchant/discounts/#{discount.id}" %></h3>
+    <h3>Discount #<%= discount.id%></h3>
     <p>Discount: <%= discount.discount_percentage %>%</p>
     <p>Minimum Quantity: <%= discount.minimum_quantity %> items</p>
     <h4><%= link_to "Edit Discount", "/merchant/discounts/#{discount.id}/edit" %></h4>
